--- a/style.css
+++ b/style.css
@@ -13,18 +13,20 @@ body{
  }
 
  .header{
-
+text-align: center;
     background-color: chocolate;
     text-align: center;
-    height: 30px;
+    height: 20px;
     justify-content: space-around;
  }
  .header a{
-    border: 2px solid blanchedalmond;
+   text-decoration: none;
+text-align: center;
+    border: 0px solid blanchedalmond;
     margin: 0px 20px;
     border-radius: 5px;
     color: white;
-    padding: 10px;
+    padding: 0px;
  }
 .contact{
     background-color: blanchedalmond;
@@ -45,9 +47,10 @@ body{
     justify-content: space-around;
  }
  .footer a{
-    border: 2px solid blanchedalmond;
+   text-decoration: none;
+    border: 0px solid blanchedalmond;
     margin: 0px 20px;
-    padding: px;
+    padding: 0px;
     border-radius: 5px;
     color: white;
     
